# history-ai

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  START_HERE.md  docker-compose.override.yml  docker-compose.prod-like.yml  docker-compose.storage-bind.yml  docker-compose.yml
.ai/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
worker/: README.md  pyproject.toml
worker/app/: main.py
worker/app/ai/: AIExecutionMode.py  AIModel.py  AIProviderConfigurationError.py  AIProviderFactory.py  AIProviderHttpError.py  AIProviderInterface.py  AIProviderResponse.py  AIProviderType.py  GeminiProvider.py  MockAIProvider.py  NotImplementedAIProviderError.py  UnsupportedAIProviderError.py
worker/app/api/: health.py  jobs.py
worker/scripts/: generate_sample_pdf.py  smoke_test_gemini.py
worker/tests/: test_ai_model.py  test_ai_provider_factory.py  test_ai_summary_generator.py  test_architecture.py  test_artifact_generation_request.py  test_artifact_generator_factory.py  test_document_extraction_service.py  test_flashcards_artifact_generator.py  test_gemini_provider.py  test_gemini_smoke_test.py  test_health.py  test_jobs_api.py  test_mock_ai_provider.py  test_pdf_extractor.py  test_processing_service.py  test_quiz_artifact_generator.py  test_summary_artifact_generator.py  test_summary_generator.py  test_summary_generator_factory.py  test_symfony_api_repository.py
(+4336 files in other folders)
