[package]
name = "lumen-shadow-desktop"
version = "0.1.0"
description = "Lumen Shadow Desktop Companion"
authors = ["Lumen"]
edition = "2021"

[lib]
name = "lumen_shadow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
